Tested All Functionalities for Monday

--- a/IEPAssistant.ipynb
+++ b/IEPAssistant.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
-    "client = OpenAI(api_key='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')"
+    "client = OpenAI(api_key='')# Enter When Run, Don't upload"
    ]
   },
   {
