--- a/IEPAssistant_demo.ipynb
+++ b/IEPAssistant_demo.ipynb
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "client = OpenAI(api_key='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')\n",
+    "client = OpenAI(api_key='')# Enter When Run, Don't upload\n",
     "assistant = IEPAssistant(client)\n",
     "try:\n",
     "    while True:\n",
