--- a/IEPAssistant_demo.ipynb
+++ b/IEPAssistant_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'asst_j9L5w6C1P8jb2Hnu0j3XweEK'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client = OpenAI(api_key='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')# Enter When Run, Don't upload\n",
+    "assistant = IEPAssistant(client)\n",
+    "assistant.config_iep(open(\"iep.pdf\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What are five questions to ask ChatGPT specifically about my child's IEP? Provide questions that would give concise, easily understandable answers that are most pressing to the topic. Respond in English with each question on a new line.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'run_k18XPlCz9B5MViQub0OcgeWO'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg = \"What are five questions to ask ChatGPT specifically about my child's IEP? Provide questions that would give concise, easily understandable answers that are most pressing to the topic. Respond in English with each question on a new line.\" # input('Enter Question: ')\n",
+    "assistant.add_message(msg)\n",
+    "print(msg)\n",
+    "sleep(2)\n",
+    "assistant.run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -21,45 +74,18 @@
      "output_type": "stream",
      "text": [
       "And Here\n",
-      "Answer: \n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"BadRequestError\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mBadRequestError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m/home/xhk/Documents/backend/IEPAssistant_demo.ipynb Cell 2\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/xhk/Documents/backend/IEPAssistant_demo.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m sleep(\u001b[39m2\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/xhk/Documents/backend/IEPAssistant_demo.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m assistant\u001b[39m.\u001b[39;49madd_message(\u001b[39minput\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mEnter Question: \u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/xhk/Documents/backend/IEPAssistant_demo.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m sleep(\u001b[39m2\u001b[39m)\n",
-      "File \u001b[0;32m~/Documents/backend/IEPAssistant.py:27\u001b[0m, in \u001b[0;36mIEPAssistant.add_message\u001b[0;34m(self, message)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmessages\u001b[39m.\u001b[39mappend({\u001b[39m\"\u001b[39m\u001b[39mrole\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39muser\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcontent\u001b[39m\u001b[39m\"\u001b[39m: message})\n\u001b[0;32m---> 27\u001b[0m thread \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mclient\u001b[39m.\u001b[39;49mbeta\u001b[39m.\u001b[39;49mthreads\u001b[39m.\u001b[39;49mcreate(\n\u001b[1;32m     28\u001b[0m messages\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmessages)\n\u001b[1;32m     29\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mthread_id \u001b[39m=\u001b[39m thread\u001b[39m.\u001b[39mid \u001b[39m# Need Validation\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/openai/resources/beta/threads/threads.py:80\u001b[0m, in \u001b[0;36mThreads.create\u001b[0;34m(self, messages, metadata, extra_headers, extra_query, extra_body, timeout)\u001b[0m\n\u001b[1;32m     79\u001b[0m extra_headers \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mOpenAI-Beta\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39massistants=v1\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m(extra_headers \u001b[39mor\u001b[39;00m {})}\n\u001b[0;32m---> 80\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_post(\n\u001b[1;32m     81\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39m/threads\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m     82\u001b[0m     body\u001b[39m=\u001b[39;49mmaybe_transform(\n\u001b[1;32m     83\u001b[0m         {\n\u001b[1;32m     84\u001b[0m             \u001b[39m\"\u001b[39;49m\u001b[39mmessages\u001b[39;49m\u001b[39m\"\u001b[39;49m: messages,\n\u001b[1;32m     85\u001b[0m             \u001b[39m\"\u001b[39;49m\u001b[39mmetadata\u001b[39;49m\u001b[39m\"\u001b[39;49m: metadata,\n\u001b[1;32m     86\u001b[0m         },\n\u001b[1;32m     87\u001b[0m         thread_create_params\u001b[39m.\u001b[39;49mThreadCreateParams,\n\u001b[1;32m     88\u001b[0m     ),\n\u001b[1;32m     89\u001b[0m     options\u001b[39m=\u001b[39;49mmake_request_options(\n\u001b[1;32m     90\u001b[0m         extra_headers\u001b[39m=\u001b[39;49mextra_headers, extra_query\u001b[39m=\u001b[39;49mextra_query, extra_body\u001b[39m=\u001b[39;49mextra_body, timeout\u001b[39m=\u001b[39;49mtimeout\n\u001b[1;32m     91\u001b[0m     ),\n\u001b[1;32m     92\u001b[0m     cast_to\u001b[39m=\u001b[39;49mThread,\n\u001b[1;32m     93\u001b[0m )\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/openai/_base_client.py:1055\u001b[0m, in \u001b[0;36mSyncAPIClient.post\u001b[0;34m(self, path, cast_to, body, options, files, stream, stream_cls)\u001b[0m\n\u001b[1;32m   1052\u001b[0m opts \u001b[39m=\u001b[39m FinalRequestOptions\u001b[39m.\u001b[39mconstruct(\n\u001b[1;32m   1053\u001b[0m     method\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mpost\u001b[39m\u001b[39m\"\u001b[39m, url\u001b[39m=\u001b[39mpath, json_data\u001b[39m=\u001b[39mbody, files\u001b[39m=\u001b[39mto_httpx_files(files), \u001b[39m*\u001b[39m\u001b[39m*\u001b[39moptions\n\u001b[1;32m   1054\u001b[0m )\n\u001b[0;32m-> 1055\u001b[0m \u001b[39mreturn\u001b[39;00m cast(ResponseT, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrequest(cast_to, opts, stream\u001b[39m=\u001b[39;49mstream, stream_cls\u001b[39m=\u001b[39;49mstream_cls))\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/openai/_base_client.py:834\u001b[0m, in \u001b[0;36mSyncAPIClient.request\u001b[0;34m(self, cast_to, options, remaining_retries, stream, stream_cls)\u001b[0m\n\u001b[1;32m    825\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrequest\u001b[39m(\n\u001b[1;32m    826\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m    827\u001b[0m     cast_to: Type[ResponseT],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    832\u001b[0m     stream_cls: \u001b[39mtype\u001b[39m[_StreamT] \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    833\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m ResponseT \u001b[39m|\u001b[39m _StreamT:\n\u001b[0;32m--> 834\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_request(\n\u001b[1;32m    835\u001b[0m         cast_to\u001b[39m=\u001b[39;49mcast_to,\n\u001b[1;32m    836\u001b[0m         options\u001b[39m=\u001b[39;49moptions,\n\u001b[1;32m    837\u001b[0m         stream\u001b[39m=\u001b[39;49mstream,\n\u001b[1;32m    838\u001b[0m         stream_cls\u001b[39m=\u001b[39;49mstream_cls,\n\u001b[1;32m    839\u001b[0m         remaining_retries\u001b[39m=\u001b[39;49mremaining_retries,\n\u001b[1;32m    840\u001b[0m     )\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/openai/_base_client.py:877\u001b[0m, in \u001b[0;36mSyncAPIClient._request\u001b[0;34m(self, cast_to, options, remaining_retries, stream, stream_cls)\u001b[0m\n\u001b[1;32m    876\u001b[0m     err\u001b[39m.\u001b[39mresponse\u001b[39m.\u001b[39mread()\n\u001b[0;32m--> 877\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_make_status_error_from_response(err\u001b[39m.\u001b[39mresponse) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    878\u001b[0m \u001b[39mexcept\u001b[39;00m httpx\u001b[39m.\u001b[39mTimeoutException \u001b[39mas\u001b[39;00m err:\n",
-      "\u001b[0;31mBadRequestError\u001b[0m: Error code: 400 - {'error': {'message': \"1 validation error for Request\\nbody -> messages -> 1 -> role\\n  value is not a valid enumeration member; permitted: 'user' (type=type_error.enum; enum_values=[<RoleParam.USER: 'user'>])\", 'type': 'invalid_request_error', 'param': None, 'code': None}}",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/xhk/Documents/backend/IEPAssistant_demo.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/xhk/Documents/backend/IEPAssistant_demo.ipynb#W1sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mAnswer: \u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m assistant\u001b[39m.\u001b[39mget_latest_message())\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/xhk/Documents/backend/IEPAssistant_demo.ipynb#W1sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/xhk/Documents/backend/IEPAssistant_demo.ipynb#W1sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39;49m\u001b[39mError: \u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m e)\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"BadRequestError\") to str"
+      "{'data': [{'id': 'msg_Aq18Qg2DMpn8CM1MAkvJZyv9', 'assistant_id': 'asst_j9L5w6C1P8jb2Hnu0j3XweEK', 'content': [{'text': {'annotations': [], 'value': \"1. What specific goals are set in my child's IEP, and how will their progress be measured?\\n2. Can you explain the accommodations and modifications included in the IEP and how they will support my child's learning?\\n3. How often will my child's IEP be reviewed, and what is the process for making any necessary adjustments?\\n4. Who are the members of my child's IEP team, and what are their roles and responsibilities?\\n5. What steps should I take if I feel my child's IEP is not being effectively implemented or needs to be changed?\"}, 'type': 'text'}], 'created_at': 1700359486, 'file_ids': [], 'metadata': {}, 'object': 'thread.message', 'role': 'assistant', 'run_id': 'run_k18XPlCz9B5MViQub0OcgeWO', 'thread_id': 'thread_7hH6jzDnjpydvt08NI5UxrX8'}, {'id': 'msg_5gbmeErPBRsyUVaTSZ8vTlCy', 'assistant_id': None, 'content': [{'text': {'annotations': [], 'value': \"What are five questions to ask ChatGPT specifically about my child's IEP? Provide questions that would give concise, easily understandable answers that are most pressing to the topic. Respond in English with each question on a new line.\"}, 'type': 'text'}], 'created_at': 1700359483, 'file_ids': [], 'metadata': {}, 'object': 'thread.message', 'role': 'user', 'run_id': None, 'thread_id': 'thread_7hH6jzDnjpydvt08NI5UxrX8'}], 'object': 'list', 'first_id': 'msg_Aq18Qg2DMpn8CM1MAkvJZyv9', 'last_id': 'msg_5gbmeErPBRsyUVaTSZ8vTlCy', 'has_more': False}\n",
+      "Answer: 1. What specific goals are set in my child's IEP, and how will their progress be measured?\n",
+      "2. Can you explain the accommodations and modifications included in the IEP and how they will support my child's learning?\n",
+      "3. How often will my child's IEP be reviewed, and what is the process for making any necessary adjustments?\n",
+      "4. Who are the members of my child's IEP team, and what are their roles and responsibilities?\n",
+      "5. What steps should I take if I feel my child's IEP is not being effectively implemented or needs to be changed?\n"
      ]
     }
    ],
    "source": [
-    "client = OpenAI(api_key='')# Enter When Run, Don't upload\n",
-    "assistant = IEPAssistant(client)\n",
-    "try:\n",
-    "    while True:\n",
-    "        assistant.config_iep(open(\"iep.pdf\", \"rb\"))\n",
-    "        sleep(2)\n",
-    "        assistant.add_message(input('Enter Question: '))\n",
-    "        sleep(2)\n",
-    "        assistant.run()\n",
-    "        sleep(3)\n",
-    "        print('And Here')\n",
-    "        print('Answer: ' + assistant.get_latest_message())\n",
-    "except Exception as e:\n",
-    "    print('Error: ' + e)"
+    "print('And Here')\n",
+    "print('Answer: ' + assistant.get_latest_message())"
    ]
   }
  ],
@@ -79,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
