--- a/IEPAssistant_demo.ipynb
+++ b/IEPAssistant_demo.ipynb
@@ -28,7 +28,7 @@
     }
    ],
    "source": [
-    "client = OpenAI(api_key='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')# Enter When Run, Don't upload\n",
+    "client = OpenAI(api_key='sk-')# Enter When Run, Don't upload\n",
     "assistant = IEPAssistant(client)\n",
     "assistant.config_iep(open(\"iep.pdf\", \"rb\"))"
    ]
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
